--- a/src/components/style.css
+++ b/src/components/style.css
@@ -17,9 +17,7 @@
   .modal-content1 {
     
     margin: auto;
-    margin-top: 100px;
-  
-   
+    margin-top: 50px;
     width: 50%;
   }
   
@@ -45,7 +43,7 @@
     position: absolute;
     top:0;
     left: 0;
-    background-color: rgba(0,0,0,0.4);  
+    background-color: rgb(0,0,0);  
   }
    /* Login form */
   .login_form_wrapper {
@@ -104,7 +102,7 @@
   }
   
   .form-group {
-    margin-bottom: 15px;
+
   }
   
   .login_wrapper .form-control {
@@ -184,7 +182,7 @@
     border-bottom: 1px solid #e4e4e4;
   }
   
-  .login_btn_wrapper a.login_btn {
+  .login_btn_wrapper .login_btn {
     text-align: center;
     text-transform: uppercase;
   }
@@ -195,11 +193,14 @@
     font-size: 16px;
     margin: 0;
   }
-  
-  
-  .login_wrapper a.login_btn:hover {
+
+  .login_btn{
+    width: 100%;
+  }
+  .login_wrapper .login_btn:hover {
     background-color: #2c6ad4;
     border-color: #2c6ad4;
+  
   }
   
   .login_wrapper a.btn:hover {
@@ -211,11 +212,15 @@
     background: #bd4033;
     border-color: #bd4033;
   }
+  .form-message{
+    height: 30px;
+    display: block;
+  }
   @media screen and (max-width: 1200px) {
     .modal-content1 {
   
       margin: auto;
-      margin-top: 250px;
+     
      
      
       width: 80%;
@@ -225,7 +230,7 @@
     .modal-content1 {
   
       margin: auto;
-      margin-top: 35%;
+    
       transform: translateY(-50%);
      
       width: 100%;
