--- a/src/components/style.css
+++ b/src/components/style.css
@@ -197,6 +197,9 @@
   .login_btn{
     width: 100%;
   }
+     .login_btn_wrapper{
+        margin-top: 20px;
+     }
   .login_wrapper .login_btn:hover {
     background-color: #2c6ad4;
     border-color: #2c6ad4;
@@ -214,7 +217,12 @@
   }
   .form-message{
     height: 30px;
+    line-height: 30px;
+    padding-left: 20px;
+    font-size: 12px;
     display: block;
+    color: red;
+    text-align: left;
   }
   @media screen and (max-width: 1200px) {
     .modal-content1 {
